[package]
name = "ledger"
version = "0.1.0"
description = "ACES token ledger (Anchor)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ledger"
# Michael's naming rule: <thing>.<kind>.<ext>.
# Anchor defaults to src/lib.rs; we point the
# crate at the named file instead.
path = "src/ledger.solana.rs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
